Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-04-24 (SVN):
    * gl_rmisc.c (R_InitExtraTextures): New procedure. Assign values to
      playertextures array here.
      (R_Init): Move resetting of gl_extra_textures to R_InitExtraTextures().
      Call R_InitExtraTextures().
      (R_TranslatePlayerSkin): Reloading of playertextures doesn't like
      GL_LoadTexture() and its associated glDeleteTextures() call, not sure
      why for now, so I have to do this the old way by overwriting them
      without deleting the old texture until I figure it out. Fixes bug
      3288081.
    * glquake.h (R_InitExtraTextures): Add prototype for the new procedure.
    * gl_vidnt.c, gl_vidsdl.c (VID_ChangeVideoMode): Call the new
      R_InitExtraTextures() procedure to reassign names to playertextures
      and to reset gl_extra_textures arrays.
    * Bumped version to 1.5.0-rc2.

2011-04-23 (SVN):
    * gamecode, portals/buddha.hc: Fixed a bug which used to prevent the
      finale screen to trigger if Praevus were killed too quickly in
      buddha_die() and buddha_run(). Analyzed and fixed by Thomas Freundt.
      While we were there, did some cleanup in buddha_die() as well.

2011-04-22 (SVN):
    * oslibs/codecs:  updated libmpg123 windows libraries to the latest
      stable 1.13.3 version.

2011-04-12 (SVN):
    * fixed several gcc-4.6 -Wunused-but-set-variable warnings.

2011-04-07 (SVN):
    * updated the COMPILE document for recent software versions.

2011-04-01 (SVN):
    * q_stdinc.h: Visual Studio 2010 provides a stdint.h, so use it for
      VS2010 and later instead the header from the msinttypes project.

2011-03-30 (SVN):
    * Minor Makefile cleanup.

2011-03-11 (SVN):
    * README.music: Added audio track information for the Hexen II "xplosiv"
      release (thanks to Sander van Dijk.)
    * README: Corrected/updated some information regarding ogg/mp3 playback.

2011-03-10 (SVN):