@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2011-04-24 (SVN):
+    * glquake.h, gl_func.h, gl_draw.c, gl_vidnt.c, gl_vidsdl.c, gl_rmisc.c,
+      gl_rsurf.c, gl_ngraph.c: abandoned texture_extension_number, switched
+      to glGenTextures() which is an opengl 1.1 requirement.
+
+2011-04-24 (SVN):
     * gl_rmisc.c (R_InitExtraTextures): New procedure. Assign values to
       playertextures array here.
       (R_Init): Move resetting of gl_extra_textures to R_InitExtraTextures().
